--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
         - job: BuildPullRequest
           condition: eq(variables['Build.Reason'], 'PullRequest')
           steps:
-                  - script: echo "Building a PR!"
+                  - script: echo "Maybe building a PR!"
                   - script: env
 
         - job: BuildStaging
