--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,10 @@
-triggers:
-        - name: Staging
-          trigger:
-                  - master
-        - name: Production
-          trigger:
-                  - production
+name: Run Pulumi
+trigger:
+        batch: true
+        branches:
+                include:
+                        master
+                        production
 
 jobs:
         - job: PrintInfo
