--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,8 @@ trigger:
         batch: true
         branches:
                 include:
-                        master
-                        production
+                        - master
+                        - production
 
 jobs:
         - job: PrintInfo
